# prototype

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Main  Makefile  cmake_install.cmake  compile_commands.json
include/: nothing
src/: main.c
